[tool.poetry]
name = "virtual-tweepy"
version = "0.1.0"
description = "A fork of Tweepy adapted to work with Virtuals's enterprise Twitter endpoint"
readme = "README.md"
license.text = "MIT"
description = "ACP Plugin for Python SDK for GAME by Virtuals"
authors = [
  "Steven Lee Soon Fatt <steven@virtuals.io>",
  "Celeste Ang <celeste@virtuals.io>"
]
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "oauthlib>=3.2.0,<4",
    "requests>=2.27.0,<3",
    "requests-oauthlib>=1.2.0,<3",
]

dynamic = ["version"]

[project.optional-dependencies]
async = [
    "aiohttp>=3.7.3,<4",
    "async-lru>=1.0.3,<3",
]
dev = [
    "coverage>=4.4.2",
    "coveralls>=2.1.0",
    "tox>=3.21.0",
]
test = [
    "urllib3<2",
    "vcrpy>=1.10.3",
]

[project.urls]
Code = "https://github.com/game-by-virtuals/game-twitter-python"
"Issue tracker" = "https://github.com/game-by-virtuals/game-twitter-python/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

